# reel-to-recipe-api

./: .env.example  .gitignore  Dockerfile.ai-worker  Dockerfile.api  Dockerfile.worker-rust  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
ai-worker/: ai_providers.py  main.py  recipe_extractor.py  requirements.txt
api/: __init__.py  auth.py  cache.py  config.py  database.py  main.py  models.py  rate_limiter.py  requirements.txt  tasks.py  tracing.py
api/models/: schemas.py
api/routes/: extract.py  recipe.py
api/services/: queue.py
infrastructure/k8s/: ai-worker.yaml  api.yaml  configmap.yaml  namespace.yaml  redis.yaml  worker-rust.yaml
infrastructure/terraform/: gke.tf  outputs.tf  providers.tf  redis.tf  storage.tf  variables.tf
shared/models/: __init__.py  schema.json
tests/: README.md  conftest.py  requirements.txt
tests/unit/api/: test_extract.py
tests/unit/workers/: test_ai_worker.py
worker-rust/: Cargo.toml
worker-rust/src/: audio.rs  download.rs  main.rs  ocr.rs  video.rs  worker.rs
