[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.34", features = ["full"] }
redis = { version = "0.23", features = ["tokio-comp", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
tempfile = "3.8"
ffmpeg-next = "6.1"
image = "0.24"
leptess = "0.14"
hound = "3.5"
whisper-rs = "0.8"
walkdir = "2.4"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"